@@ -1,2 +1,3 @@
 
 IDEAL_PAYMENT_ANNOTATION_KEY = 'collective.mollie.adapter.idealpayment'
+IDEAL_MULTIPLE_PAYMENTS_ANNOTATION_KEY = 'collective.mollie.adapter.idealmultiplepayments'
