@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<response>
+    <order>
+        <transaction_id>5727650330ad65fe9b482d599bbcc779</transaction_id>
+        <amount>123</amount>
+        <currency>EUR</currency>
+        <URL>https://mijn.postbank.nl/internetbankieren/SesamLoginServlet?sessie=ideal&amp;trxid=003123456789123&amp;random=123456789abcdefgh</URL>
+        <message>Your iDEAL-payment has succesfuly been setup. Your customer should visit the given URL to make the payment</message>
+    </order>
+</response>
