@@ -4,6 +4,10 @@ Changelog
 0.3 (unreleased)
 ----------------
 
+- Implement a new adapter (MollieIdealMultiplePayments) to register
+  multiple payments on a single object.
+  [markvl]
+
 - Fix FutureWarnings that appeared when running the tests.
   [markvl]
 
